<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:layout_marginTop="50dp"
            android:textSize="35dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solve_parking"
            android:layout_marginTop="40dp"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textSize="30sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="30sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@color/blueClick"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/register"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@color/blueClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"
            android:text="@string/forgot_password"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</ScrollView>